# InnoID

./: .gitignore  docker-compose.yml
Core/: Dockerfile  main_api.py
Core/innoid_core/: settings.py  use_cases.py
Core/innoid_core/api/: main.py
Core/innoid_core/api/v1/: fastapi_app.py
Core/innoid_core/api/v2/: fastapi_app.py
Core/innoid_core/cli/: helpers.py  main.py
Core/innoid_core/cli/commands/: create_service_app.py  delete_service_app.py  get_service_apps.py  refresh_service_app_api_key.py
Core/innoid_core/domain/: external_users.py
Core/innoid_core/infrastructure/microsoft_ad/: external_users.py
Core/innoid_core/infrastructure/postgresql/: database.py
TelegramBot/: Dockerfile  main_telegram_bot.py  pyproject.toml
TelegramBot/innoid_telegram_bot/: api.py  main.py  settings.py
TelegramBot/innoid_telegram_bot/routers/: base.py
Web/: Dockerfile  package-lock.json  package.json
Web/nginx_config/: nginx.conf
Web/src/: App.tsx  consts.tsx  main.tsx
Web/src/components/: CardBox.tsx  Navbar.tsx  UserLayout.tsx  UserShell.tsx
Web/src/components/providers/: UserProvider.tsx
Web/src/components/shell/: Shell.tsx  ShellContentBox.tsx  ShellContentCell.tsx  ShellContentTitle.tsx  ShellNavLink.tsx
Web/src/context/: user.ts
Web/src/hooks/: apiRequest.ts  userContext.ts
Web/src/lib/: config.ts  telegram.ts  utils.ts
Web/src/lib/api/: entities.ts  request.ts  token-storage.ts
Web/src/pages/: Home.tsx  Login.tsx  Logout.tsx  NotFound.tsx  SSOLoginHandle.tsx
Web/src/pages/apps/: CreateApp.tsx  DeleteApp.tsx  EditApp.tsx  ResetAppApiKey.tsx
(+72 files in other folders)
